[gd_scene load_steps=20 format=2]

[ext_resource path="res://fonte/Ningst Only Peace Font by 7Ntypes.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Imagens/down-arrow.png" type="Texture" id=2]
[ext_resource path="res://itensdodesafio/cocos - co패pia.png" type="Texture" id=3]
[ext_resource path="res://Imagens/icon.png" type="Texture" id=4]
[ext_resource path="res://Imagens/f3a222a4e1676e5.png" type="Texture" id=5]
[ext_resource path="res://itensdodesafio/cocos - co패pia 3.png" type="Texture" id=6]
[ext_resource path="res://Imagens/New Piskel (17).png" type="Texture" id=7]
[ext_resource path="res://addons/dialogic/Example Assets/backgrounds/background-1.png" type="Texture" id=8]
[ext_resource path="res://Imagens/salgema1.png" type="Texture" id=9]
[ext_resource path="res://Scripts/desafio1.gd" type="Script" id=10]
[ext_resource path="res://Scripts/paulo.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.25, 13.5 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "f3a222a4e1676e5.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 64, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "cocos - co패pia 3.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 96, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "cocos - co패pia.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.875, 12 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 93.5, 10 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 10 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 517, 339 )
scale = Vector2( 0.982128, 2.57034 )
texture = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="fundo"]
margin_left = -529.462
margin_top = -133.445
margin_right = 515.538
margin_bottom = 98.5546
color = Color( 0, 0, 0, 0.854902 )

[node name="garotodesafio1" type="KinematicBody2D" parent="."]
position = Vector2( 128, 223 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="garotodesafio1"]
position = Vector2( 1, 1 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="garotodesafio1"]
position = Vector2( 1, 2.5 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 65536, 2, 0, 65539, 2, 0, 65554, 2, 0, 131072, 2, 0, 131075, 2, 0, 131090, 2, 0, 196608, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196626, 2, 0, 262144, 2, 0, 262157, 2, 0, 262158, 2, 0, 262162, 2, 0, 327680, 2, 0, 327693, 2, 0, 327698, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327706, 2, 0, 327707, 2, 0, 327708, 2, 0, 327709, 2, 0, 327710, 2, 0, 327711, 2, 0, 393216, 2, 0, 393229, 2, 0, 393234, 2, 0, 393247, 2, 0, 458752, 2, 0, 458765, 2, 0, 458770, 2, 0, 458783, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524306, 2, 0, 524319, 2, 0, 589824, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589855, 2, 0, 655360, 2, 0, 655391, 2, 0, 720896, 2, 0, 720927, 2, 0, 786432, 2, 0, 786463, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851999, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 917529, 2, 0, 917530, 2, 0, 917531, 2, 0, 917532, 2, 0, 917533, 2, 0, 917534, 2, 0, 917535, 2, 0 )

[node name="controle" type="Node2D" parent="."]

[node name="direita" type="TouchScreenButton" parent="controle"]
position = Vector2( 399, 593 )
rotation = -1.5708
scale = Vector2( 0.17187, 0.18111 )
normal = ExtResource( 2 )

[node name="baixo" type="TouchScreenButton" parent="controle"]
position = Vector2( 22, 498 )
scale = Vector2( 0.164063, 0.173828 )
normal = ExtResource( 2 )

[node name="cima" type="TouchScreenButton" parent="controle"]
position = Vector2( 296, 588 )
rotation = 3.14159
scale = Vector2( 0.172, 0.181 )
normal = ExtResource( 2 )

[node name="esquerda" type="TouchScreenButton" parent="controle"]
position = Vector2( 686, 503 )
rotation = 1.5708
scale = Vector2( 0.172, 0.181 )
normal = ExtResource( 2 )

[node name="coletavel1" type="Area2D" parent="."]
position = Vector2( 99, 391 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel1"]
position = Vector2( 0.649994, 8.73125 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel1"]
position = Vector2( -23.125, -2 )
shape = SubResource( 4 )

[node name="palmeira1" type="Sprite" parent="."]
position = Vector2( 50, 235 )
texture = ExtResource( 7 )

[node name="palmeira2" type="Sprite" parent="."]
position = Vector2( 16, 425 )
texture = ExtResource( 7 )

[node name="palmeira3" type="Sprite" parent="."]
position = Vector2( 1006, 424 )
texture = ExtResource( 7 )

[node name="palmeira4" type="Sprite" parent="."]
position = Vector2( 435, 237 )
texture = ExtResource( 7 )

[node name="palmeira5" type="Sprite" parent="."]
position = Vector2( 721, 134 )
texture = ExtResource( 7 )

[node name="coletavel2" type="Area2D" parent="."]
position = Vector2( 153, 399 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel2"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel2"]
position = Vector2( 0, -10 )
shape = SubResource( 6 )

[node name="coletavel3" type="Area2D" parent="."]
position = Vector2( 213, 398 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel3"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel3"]
position = Vector2( -83.5, -10 )
shape = SubResource( 6 )

[node name="pontos" type="Label" parent="."]
margin_left = 803.0
margin_top = 535.0
margin_right = 857.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 7 )
text = "PONTOS: "

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 886.0
margin_top = 529.0
margin_right = 995.0
margin_bottom = 569.0
color = Color( 0, 0, 0, 0 )

[node name="pontosnume" type="Label" parent="ColorRect"]
margin_left = 8.0
margin_top = 4.0
margin_right = 48.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 8 )

[connection signal="pressed" from="controle/direita" to="garotodesafio1" method="_on_direita_pressed"]
[connection signal="pressed" from="controle/baixo" to="garotodesafio1" method="_on_baixo_pressed"]
[connection signal="pressed" from="controle/cima" to="garotodesafio1" method="_on_cima_pressed"]
[connection signal="pressed" from="controle/esquerda" to="garotodesafio1" method="_on_esquerda_pressed"]
[connection signal="body_entered" from="coletavel1" to="." method="_on_coletavel1_body_entered"]
[connection signal="body_entered" from="coletavel2" to="." method="_on_coletavel2_body_entered"]
[connection signal="body_entered" from="coletavel3" to="." method="_on_coletavel3_body_entered"]
